html struktur added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="da">
   <head>
     <meta charset="UTF-8" />
+    <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="style.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <li><a href="0">PORTFOLIO</a></li>
+        <li><a href="0">OM MIG</a></li>
+        <li><a href="0">FORSIDE</a></li>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script src="login.js"></script>
+    <script src="burgermenu.js"></script>
+  </body>
 </html>
