--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
   <body>
     <header>
       <nav>
-        <li><a href="0">PORTFOLIO</a></li>
-        <li><a href="0">OM MIG</a></li>
-        <li><a href="0">FORSIDE</a></li>
+        <ul>
+          <li><a href="0">PORTFOLIO</a></li>
+          <li><a href="0">OM MIG</a></li>
+          <li><a href="0">FORSIDE</a></li>
+        </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Dette er en start</h1>
+      </section>
+    </main>
     <footer></footer>
     <script src="login.js"></script>
     <script src="burgermenu.js"></script>
