--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside</title>
   </head>
-  <body>
-    <header>
+  <body style="background-color: #f3f3f5">
+    <header style="background-color: #e7e1df">
+      <div class="logo">
+        <a href="index.html">Cecilie Jasmin</a>
+      </div>
       <nav>
-        <ul>
+        <div id="menuknap">☰</div>
+        <ul id="menu" class="hidden">
           <li><a href="0">PORTFOLIO</a></li>
           <li><a href="0">OM MIG</a></li>
           <li><a href="0">FORSIDE</a></li>
