background color removed from html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside</title>
   </head>
-  <body style="background-color: #f3f3f5">
-    <header style="background-color: #e7e1df">
+
+  <body>
+    <header>
       <div class="logo">
         <a href="index.html">Cecilie Jasmin</a>
       </div>
@@ -27,12 +28,28 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section>
-        <h1>Dette er en start</h1>
+        <h1>PORTFOLIO</h1>
+        <hr />
+        <p>Velkommen til mit portfolio</p>
       </section>
     </main>
-    <footer></footer>
+
+    <footer>
+      <div class="footer_info">
+        <div class="navn">
+          <p>Cecilie Jasmin Jørgensen</p>
+        </div>
+        <div class="mail">
+          <p>ceci919p@stud.kea.dk</p>
+        </div>
+        <div class="telefon">
+          <p>Tlf.nr. 31573555</p>
+        </div>
+      </div>
+    </footer>
     <script src="login.js"></script>
     <script src="burgermenu.js"></script>
   </body>
