--- a/index.html
+++ b/index.html
@@ -29,11 +29,32 @@
       </nav>
     </header>
 
-    <main>
+    <main id="website">
+      <section class="hero">
+        <img src="billeder/baggrundsbillede_1.webp" alt="test" />
+      </section>
+
       <section>
         <h1>PORTFOLIO</h1>
         <hr />
         <p>Velkommen til mit portfolio</p>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <img src="billeder/baggrundsbillede_1.webp" alt="test" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+            culpa voluptatum a nesciunt saepe corrupti recusandae dolorem eaque
+            quaerat dignissimos.
+          </p>
+        </div>
+      </section>
+
+      <section class="round">
+        <p>lavet af</p>
+        <p>Cecilie Jørgensen</p>
+        <img src="billeder/profilbillede.webp" alt="test" />
       </section>
     </main>
 
