--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="LOGO v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside</title>
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html">Cecilie Jasmin</a>
+        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
       <nav>
         <div id="menuknap">☰</div>
