links til nav added

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <nav>
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
-          <li><a href="0">PORTFOLIO</a></li>
-          <li><a href="0">OM MIG</a></li>
-          <li><a href="0">FORSIDE</a></li>
+          <li><a href="portfolio.html">PORTFOLIO</a></li>
+          <li><a href="om_mig.html">OM MIG</a></li>
+          <li><a href="index.html">FORSIDE</a></li>
         </ul>
       </nav>
     </header>
 
-    <main id="website">
+    <main id="forside">
       <section class="hero">
         <img src="billeder/baggrundsbillede_1.webp" alt="test" />
       </section>
