html struktur added

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,102 @@
       </nav>
     </header>
 
-    <main id="portfolio"></main>
+    <main id="portfolio">
+      <section>
+        <img src="billeder/baggrundsbillede_1.webp" />
+      </section>
+
+      <section>
+        <h1>Portfolio</h1>
+        <hr />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+          exercitationem fuga debitis quidem doloribus at magni, nemo, placeat
+          culpa dicta nobis. Quidem nemo, expedita at quia soluta similique!
+          Non, nisi?
+        </p>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <div class="image">
+            <img src="billeder/profilbillede.webp" />
+          </div>
+          <div class="text">
+            <h2>test</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
+              minima! Deserunt dolorum eveniet minima harum quasi quis velit
+              distinctio placeat veritatis facilis, ratione explicabo aliquam
+              dolores odit odio. Reiciendis.
+            </p>
+            <div class="links">
+              <a href="0" target="_blank">klik her</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <div class="text">
+            <h2>test</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatum doloribus corporis nemo laboriosam laudantium neque
+              nulla nobis eaque animi perspiciatis.
+            </p>
+            <div class="links">
+              <a href="0" target="_blank">klik her</a>
+            </div>
+          </div>
+
+          <div class="image">
+            <img src="billeder/billede_test.webp" />
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <div class="image">
+            <img src="billeder/profilbillede.webp" />
+          </div>
+          <div class="text">
+            <h2>test</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
+              minima! Deserunt dolorum eveniet minima harum quasi quis velit
+              distinctio placeat veritatis facilis, ratione explicabo aliquam
+              dolores odit odio. Reiciendis.
+            </p>
+            <div class="links">
+              <a href="0" target="_blank">klik her</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <div class="text">
+            <h2>test</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptatum doloribus corporis nemo laboriosam laudantium neque
+              nulla nobis eaque animi perspiciatis.
+            </p>
+            <div class="links">
+              <a href="0" target="_blank">klik her</a>
+            </div>
+          </div>
+
+          <div class="image">
+            <img src="billeder/billede_test.webp" />
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <div class="footer_info">
