--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </nav>
     </header>
 
-    <main id="forside">
-      <section class="hero">
+    <main>
+      <section class="splash">
         <img src="billeder/baggrundsbillede_1.webp" alt="test" />
       </section>
 
