om mig indhold added in html

--- a/om_mig.html
+++ b/om_mig.html
@@ -30,7 +30,36 @@
       </nav>
     </header>
 
-    <main id="om_mig"></main>
+    <main>
+      <section class="splash">
+        <img src="billeder/baggrundsbillede_1.webp" />
+      </section>
+
+      <section>
+        <h1>Hvem er jeg?</h1>
+        <hr />
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <img src="billeder/billede_test.webp" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi,
+            odit.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore,
+            quisquam.
+          </p>
+          <img src="billeder/profilbillede.webp" />
+        </div>
+      </section>
+    </main>
 
     <footer>
       <div class="footer_info">
