--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,9 @@
       </nav>
     </header>
 
-    <main id="portfolio">
-      <section>
-        <img src="billeder/baggrundsbillede_1.webp" />
+    <main>
+      <section class="splash">
+        <img src="billeder/splash_portfolio_2.webp" />
       </section>
 
       <section>
@@ -49,10 +49,10 @@
       <section>
         <div class="section_wrapper">
           <div class="image">
-            <img src="billeder/profilbillede.webp" />
+            <img src="billeder/web_responsive.webp" />
           </div>
           <div class="text">
-            <h2>test</h2>
+            <h2>02 WEB</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
               minima! Deserunt dolorum eveniet minima harum quasi quis velit
@@ -69,7 +69,7 @@
       <section>
         <div class="section_wrapper">
           <div class="text">
-            <h2>test</h2>
+            <h2>03 UX</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Voluptatum doloribus corporis nemo laboriosam laudantium neque
@@ -81,7 +81,7 @@
           </div>
 
           <div class="image">
-            <img src="billeder/billede_test.webp" />
+            <img src="billeder/ux_prototype.webp" />
           </div>
         </div>
       </section>
@@ -89,10 +89,10 @@
       <section>
         <div class="section_wrapper">
           <div class="image">
-            <img src="billeder/profilbillede.webp" />
+            <img src="billeder/spil.webp" />
           </div>
           <div class="text">
-            <h2>test</h2>
+            <h2>04 ANIMATION</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
               minima! Deserunt dolorum eveniet minima harum quasi quis velit
@@ -109,7 +109,7 @@
       <section>
         <div class="section_wrapper">
           <div class="text">
-            <h2>test</h2>
+            <h2>05 CONTENT</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Voluptatum doloribus corporis nemo laboriosam laudantium neque
@@ -121,7 +121,7 @@
           </div>
 
           <div class="image">
-            <img src="billeder/billede_test.webp" />
+            <img src="billeder/redesign.webp" />
           </div>
         </div>
       </section>
