class round added to pic

--- a/om_mig.html
+++ b/om_mig.html
@@ -42,7 +42,9 @@
 
       <section>
         <div class="section_wrapper">
-          <img src="billeder/billede_test.webp" />
+          <div class="round">
+            <img src="billeder/billede_test.webp" />
+          </div>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi,
             odit.
@@ -56,7 +58,9 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore,
             quisquam.
           </p>
-          <img src="billeder/profilbillede.webp" />
+          <div class="round">
+            <img src="billeder/profilbillede.webp" />
+          </div>
         </div>
       </section>
     </main>
