--- a/portfolio.html
+++ b/portfolio.html
@@ -53,35 +53,38 @@
           </div>
           <div class="text">
             <h2>02 WEB</h2>
+            <h3>date</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
               minima! Deserunt dolorum eveniet minima harum quasi quis velit
               distinctio placeat veritatis facilis, ratione explicabo aliquam
               dolores odit odio. Reiciendis.
             </p>
-            <div class="links">
+            <button>
               <a href="0" target="_blank">klik her</a>
-            </div>
+            </button>
           </div>
         </div>
       </section>
 
       <section>
         <div class="section_wrapper">
-          <div class="text">
-            <h2>03 UX</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptatum doloribus corporis nemo laboriosam laudantium neque
-              nulla nobis eaque animi perspiciatis.
-            </p>
-            <div class="links">
-              <a href="0" target="_blank">klik her</a>
-            </div>
-          </div>
-
           <div class="image">
             <img src="billeder/ux_prototype.webp" />
+          </div>
+          <div class="section_wrapper">
+            <div class="text">
+              <h2>03 UX</h2>
+              <h3>date</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum doloribus corporis nemo laboriosam laudantium neque
+                nulla nobis eaque animi perspiciatis.
+              </p>
+              <button>
+                <a href="0" target="_blank">klik her</a>
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -93,21 +96,25 @@
           </div>
           <div class="text">
             <h2>04 ANIMATION</h2>
+            <h3>date</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
               minima! Deserunt dolorum eveniet minima harum quasi quis velit
               distinctio placeat veritatis facilis, ratione explicabo aliquam
               dolores odit odio. Reiciendis.
             </p>
-            <div class="links">
+            <button>
               <a href="0" target="_blank">klik her</a>
-            </div>
+            </button>
           </div>
         </div>
       </section>
 
       <section>
         <div class="section_wrapper">
+          <div class="image">
+            <img src="billeder/redesign.webp" />
+          </div>
           <div class="text">
             <h2>05 CONTENT</h2>
             <p>
@@ -115,13 +122,9 @@
               Voluptatum doloribus corporis nemo laboriosam laudantium neque
               nulla nobis eaque animi perspiciatis.
             </p>
-            <div class="links">
+            <button>
               <a href="0" target="_blank">klik her</a>
-            </div>
-          </div>
-
-          <div class="image">
-            <img src="billeder/redesign.webp" />
+            </button>
           </div>
         </div>
       </section>
