button added to index

--- a/index.html
+++ b/index.html
@@ -44,11 +44,16 @@
       <section>
         <div class="section_wrapper">
           <img src="billeder/baggrundsbillede_1.webp" alt="test" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-            culpa voluptatum a nesciunt saepe corrupti recusandae dolorem eaque
-            quaerat dignissimos.
-          </p>
+          <div class="text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laboriosam culpa voluptatum a nesciunt saepe corrupti recusandae
+              dolorem eaque quaerat dignissimos.
+            </p>
+            <button>
+              <a href="0" target="_blank">SE TEMA</a>
+            </button>
+          </div>
         </div>
       </section>
 
