class added to section h1 to h2

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
       </section>
 
       <section>
-        <h1>Portfolio</h1>
+        <h2>Portfolio</h2>
         <hr />
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
@@ -48,41 +48,21 @@
 
       <section>
         <div class="section_wrapper">
-          <div class="image">
-            <img src="billeder/web_responsive.webp" />
-          </div>
-          <div class="text">
-            <h2>02 WEB</h2>
-            <h3>date</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
-              minima! Deserunt dolorum eveniet minima harum quasi quis velit
-              distinctio placeat veritatis facilis, ratione explicabo aliquam
-              dolores odit odio. Reiciendis.
-            </p>
-            <button>
-              <a href="0" target="_blank">klik her</a>
-            </button>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="section_wrapper">
-          <div class="image">
-            <img src="billeder/ux_prototype.webp" />
-          </div>
-          <div class="section_wrapper">
+          <div class="col_left">
+            <div class="image">
+              <img src="billeder/responsive_test.png" />
+            </div>
             <div class="text">
-              <h2>03 UX</h2>
+              <h2>02 WEB</h2>
               <h3>date</h3>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum doloribus corporis nemo laboriosam laudantium neque
-                nulla nobis eaque animi perspiciatis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+                quos minima! Deserunt dolorum eveniet minima harum quasi quis
+                velit distinctio placeat veritatis facilis, ratione explicabo
+                aliquam dolores odit odio. Reiciendis.
               </p>
               <button>
-                <a href="0" target="_blank">klik her</a>
+                <a href="0" target="_blank">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -91,40 +71,65 @@
 
       <section>
         <div class="section_wrapper">
-          <div class="image">
-            <img src="billeder/spil.webp" />
-          </div>
-          <div class="text">
-            <h2>04 ANIMATION</h2>
-            <h3>date</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos
-              minima! Deserunt dolorum eveniet minima harum quasi quis velit
-              distinctio placeat veritatis facilis, ratione explicabo aliquam
-              dolores odit odio. Reiciendis.
-            </p>
-            <button>
-              <a href="0" target="_blank">klik her</a>
-            </button>
+          <div class="col_right">
+            <div class="image">
+              <img src="billeder/UX_test.png" />
+            </div>
+            <div class="text">
+              <h2>03 UX</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum doloribus corporis nemo laboriosam laudantium neque
+                nulla nobis eaque animi perspiciatis.
+              </p>
+              <button>
+                <a href="0" target="_blank">SE TEMA</a>
+              </button>
+            </div>
           </div>
         </div>
       </section>
 
       <section>
         <div class="section_wrapper">
-          <div class="image">
-            <img src="billeder/redesign.webp" />
+          <div class="col_left">
+            <div class="image">
+              <img src="billeder/spil_test.png" />
+            </div>
+            <div class="text">
+              <h2>04 ANIMATION</h2>
+              <h3>date</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+                quos minima! Deserunt dolorum eveniet minima harum quasi quis
+                velit distinctio placeat veritatis facilis, ratione explicabo
+                aliquam dolores odit odio. Reiciendis.
+              </p>
+              <button>
+                <a href="0" target="_blank">SE TEMA</a>
+              </button>
+            </div>
           </div>
-          <div class="text">
-            <h2>05 CONTENT</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptatum doloribus corporis nemo laboriosam laudantium neque
-              nulla nobis eaque animi perspiciatis.
-            </p>
-            <button>
-              <a href="0" target="_blank">klik her</a>
-            </button>
+        </div>
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <div class="col_right">
+            <div class="image">
+              <img src="billeder/redesign_test.png" />
+            </div>
+            <div class="text">
+              <h2>05 CONTENT</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Voluptatum doloribus corporis nemo laboriosam laudantium neque
+                nulla nobis eaque animi perspiciatis.
+              </p>
+              <button>
+                <a href="0" target="_blank">SE TEMA</a>
+              </button>
+            </div>
           </div>
         </div>
       </section>
