div added to button

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
               Laboriosam culpa voluptatum a nesciunt saepe corrupti recusandae
               dolorem eaque quaerat dignissimos.
             </p>
-            <button>
-              <a href="0" target="_blank">SE TEMA</a>
-            </button>
+
+            <div>
+              <button>
+                <a href="0" target="_blank">SE TEMA</a>
+              </button>
+            </div>
           </div>
         </div>
       </section>
