class added to text

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <img src="billeder/splash_portfolio_2.webp" />
       </section>
 
-      <section>
+      <section class="forord">
         <h2>Portfolio</h2>
         <hr />
         <p>
