link til undersider added

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 aliquam dolores odit odio. Reiciendis.
               </p>
               <button>
-                <a href="0" target="_blank">SE TEMA</a>
+                <a href="web.html" target="_blank">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -83,7 +83,7 @@
                 nulla nobis eaque animi perspiciatis.
               </p>
               <button>
-                <a href="0" target="_blank">SE TEMA</a>
+                <a href="ux.html" target="_blank">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 aliquam dolores odit odio. Reiciendis.
               </p>
               <button>
-                <a href="0" target="_blank">SE TEMA</a>
+                <a href="animation.html" target="_blank">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -127,7 +127,7 @@
                 nulla nobis eaque animi perspiciatis.
               </p>
               <button>
-                <a href="0" target="_blank">SE TEMA</a>
+                <a href="content.html" target="_blank">SE TEMA</a>
               </button>
             </div>
           </div>
