--- a/om_mig.html
+++ b/om_mig.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="LOGO v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forside</title>
+    <title>Om mig</title>
   </head>
 
   <body>
