html structure added

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="LOGO v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forside</title>
+    <title>Portfolio</title>
   </head>
 
   <body>
@@ -62,7 +62,7 @@
                 aliquam dolores odit odio. Reiciendis.
               </p>
               <button>
-                <a href="web.html" target="_blank">SE TEMA</a>
+                <a href="web.html">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -83,7 +83,7 @@
                 nulla nobis eaque animi perspiciatis.
               </p>
               <button>
-                <a href="ux.html" target="_blank">SE TEMA</a>
+                <a href="ux.html">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 aliquam dolores odit odio. Reiciendis.
               </p>
               <button>
-                <a href="animation.html" target="_blank">SE TEMA</a>
+                <a href="animation.html">SE TEMA</a>
               </button>
             </div>
           </div>
@@ -127,7 +127,7 @@
                 nulla nobis eaque animi perspiciatis.
               </p>
               <button>
-                <a href="content.html" target="_blank">SE TEMA</a>
+                <a href="content.html">SE TEMA</a>
               </button>
             </div>
           </div>
