--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div>
               <button>
-                <a href="0" target="_blank">SE TEMA</a>
+                <a href="portfolio.html">SE PORTFOLIO</a>
               </button>
             </div>
           </div>
