--- a/web.html
+++ b/web.html
@@ -30,7 +30,19 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="splash">
+        <img src="billeder/baggrundsbillede_1.webp" />
+      </section>
+
+      <section class="forord">
+        <h1>02 WEB</h1>
+        <hr />
+        <p>Dette er temaet grundlæggende web</p>
+      </section>
+
+      <section></section>
+    </main>
 
     <footer>
       <div class="footer_info">
