indhold added i web underside

--- a/web.html
+++ b/web.html
@@ -41,7 +41,25 @@
         <p>Dette er temaet grundlæggende web</p>
       </section>
 
-      <section></section>
+      <section>
+        <img src="billeder/web_responsive.webp" />
+        <h2>overskrift</h2>
+        <p>tema beskrivelse</p>
+        <button>
+          <a
+            href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
+            target="_blank"
+            >BESØG SITE</a
+          >
+        </button>
+        <button>
+          <a
+            href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
+            target="_blank"
+            >SE STYLETILE</a
+          >
+        </button>
+      </section>
     </main>
 
     <footer>
