--- a/content.html
+++ b/content.html
@@ -30,7 +30,36 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section>
+        <img src="billeder/baggrundsbillede_1.webp" />
+      </section>
+
+      <section>
+        <h1>CONTENT</h1>
+      </section>
+
+      <section>
+        <img src="billeder/pilot_projekt.webp" />
+        <h2>Pilot projekt</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
+          et ea nesciunt voluptate soluta, eos doloremque molestiae. Quibusdam
+          assumenda esse nemo similique harum nobis necessitatibus repellendus
+          non doloribus, eaque suscipit!
+        </p>
+      </section>
+
+      <section>
+        <img src="billeder/redesign.webp" />
+        <h2>Resign</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum
+          ipsam at amet assumenda tempora voluptatem nam, cupiditate fugit ullam
+          minus minima sed dicta animi ab aliquid ipsa. Commodi, officia?
+        </p>
+      </section>
+    </main>
 
     <footer>
       <div class="footer_info">
