--- a/animation.html
+++ b/animation.html
@@ -30,7 +30,46 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section>
+        <img src="billeder/splash_portfolio_2.webp" />
+      </section>
+      <section>
+        <h2>GRUNDLÆGGENDE ANIMATION</h2>
+      </section>
+
+      <section>
+        <img src="billeder/spil.webp" />
+        <h2>spil</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
+          assumenda porro natus, reiciendis delectus autem nostrum aliquam,
+          veritatis nulla sed temporibus saepe. Autem nobis mollitia tempore
+          natus quas exercitationem provident.
+        </p>
+        <button>
+          <a
+            href="http://www.ceciliejasmin.dk/kea/04_animation/mus_i_elefanthus/index.html"
+            >SPIL SPILLET</a
+          >
+        </button>
+      </section>
+
+      <section>
+        <img src="billeder/spil.webp" />
+        <h2>spil website</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
+          nam accusamus eligendi consequatur, ex obcaecati similique ut
+          architecto est.
+        </p>
+        <button>
+          <a href="http://ceciliejasmin.dk/kea/04_animation/website/"
+            >SPIL WEBSITE</a
+          >
+        </button>
+      </section>
+    </main>
 
     <footer>
       <div class="footer_info">
