--- a/ux.html
+++ b/ux.html
@@ -30,7 +30,23 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section>
+        <img src="billeder/ux_prototype.webp" />
+        <h2>GRUNDLÆGGENDE UX</h2>
+        <p>temabeskrivelse</p>
+        <button>
+          <a
+            href="https://xd.adobe.com/view/34c4c29e-1f5b-4f42-8f38-92ab463a18df-6197/"
+            target="_blank"
+            >SE PROTOTYPE</a
+          >
+        </button>
+        <button>
+          <a href="0">SE DOKUMENTATION</a>
+        </button>
+      </section>
+    </main>
 
     <footer>
       <div class="footer_info">
