--- a/web.html
+++ b/web.html
@@ -54,7 +54,7 @@
         </button>
         <button>
           <a
-            href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
+            href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
             target="_blank"
             >SE STYLETILE</a
           >
