--- a/content.html
+++ b/content.html
@@ -48,6 +48,20 @@
           assumenda esse nemo similique harum nobis necessitatibus repellendus
           non doloribus, eaque suscipit!
         </p>
+
+        <button>
+          <a
+            href="http://ceciliejasmin.dk/kea/05_content/01_pilot/pilot_website/index.html"
+            target="_blank"
+            >BESØG WEBSITE</a
+          >
+        </button>
+        <button>
+          <a
+            href="http://ceciliejasmin.dk/kea/05_content/01_pilot/julianes_passion_interview.mp4"
+            >SE VIDEO</a
+          >
+        </button>
       </section>
 
       <section>
@@ -58,6 +72,14 @@
           ipsam at amet assumenda tempora voluptatem nam, cupiditate fugit ullam
           minus minima sed dicta animi ab aliquid ipsa. Commodi, officia?
         </p>
+        <button>
+          <a href="https://musing-shirley-56f439.netlify.app/" target="_blank"
+            >BESØG WEBSITE</a
+          >
+        </button>
+        <button>
+          <a href="0" target="_blank">DOKUMENTATION</a>
+        </button>
       </section>
     </main>
 
