--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="logo">
         <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
       </div>
-      <nav>
+      <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
         <ul id="menu" class="hidden">
           <li><a href="index.html">FORSIDE</a></li>
@@ -32,18 +32,15 @@
 
     <main>
       <section class="splash">
-        <img src="billeder/baggrundsbillede_1.webp" alt="test" />
-      </section>
+        <img src="billeder/splash_portfolio_3.webp" alt="test" />
 
-      <section>
         <h1>PORTFOLIO</h1>
-        <hr />
-        <p>Velkommen til mit portfolio</p>
+        <p>MMD 1. SEMESTER F2021</p>
       </section>
 
       <section>
         <div class="section_wrapper">
-          <img src="billeder/baggrundsbillede_1.webp" alt="test" />
+          <img src="billeder/portfolio‑billede.webp" alt="test" />
           <div class="text">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -51,7 +48,7 @@
               dolorem eaque quaerat dignissimos.
             </p>
 
-            <div>
+            <div class="knap">
               <button>
                 <a href="portfolio.html">SE PORTFOLIO</a>
               </button>
@@ -60,10 +57,12 @@
         </div>
       </section>
 
-      <section class="round">
-        <p>lavet af</p>
-        <p>Cecilie Jørgensen</p>
-        <img src="billeder/profilbillede.webp" alt="test" />
+      <section class="wide">
+        <div class="round">
+          <p>lavet af</p>
+          <p>Cecilie Jørgensen</p>
+          <img src="billeder/profilbillede.webp" alt="test" />
+        </div>
       </section>
     </main>
 
