--- a/portfolio.html
+++ b/portfolio.html
@@ -30,31 +30,32 @@
       </nav>
     </header>
 
-    <main>
-      <section class="splash">
-        <img src="billeder/splash_portfolio_2.webp" />
-      </section>
-
+    <main id="portfolio">
       <section class="forord">
-        <h2>Portfolio</h2>
-        <hr />
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-          exercitationem fuga debitis quidem doloribus at magni, nemo, placeat
-          culpa dicta nobis. Quidem nemo, expedita at quia soluta similique!
-          Non, nisi?
-        </p>
+        <div class="round">
+          <img src="billeder/profilbillede.webp" />
+        </div>
+        <div class="text_indhold">
+          <h2>Portfolio</h2>
+          <hr />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+            exercitationem fuga debitis quidem doloribus at magni, nemo, placeat
+            culpa dicta nobis. Quidem nemo, expedita at quia soluta similique!
+            Non, nisi?
+          </p>
+        </div>
       </section>
 
       <section>
         <div class="section_wrapper">
-          <div class="col_left">
+          <div class="col_left_top">
             <div class="image">
               <img src="billeder/responsive_test.png" />
             </div>
             <div class="text">
               <h2>02 WEB</h2>
-              <h3>date</h3>
+              <h4>08. FEBRUAR - 05. MARTS 2021</h4>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
                 quos minima! Deserunt dolorum eveniet minima harum quasi quis
@@ -77,6 +78,7 @@
             </div>
             <div class="text">
               <h2>03 UX</h2>
+              <h4>08. MARTS - 26. MARTS 2021</h4>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Voluptatum doloribus corporis nemo laboriosam laudantium neque
@@ -98,7 +100,7 @@
             </div>
             <div class="text">
               <h2>04 ANIMATION</h2>
-              <h3>date</h3>
+              <h4>6. APRIL - 07. MAJ 2021</h4>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
                 quos minima! Deserunt dolorum eveniet minima harum quasi quis
@@ -115,12 +117,13 @@
 
       <section>
         <div class="section_wrapper">
-          <div class="col_right">
+          <div class="col_right_bottom">
             <div class="image">
               <img src="billeder/redesign_test.png" />
             </div>
             <div class="text">
               <h2>05 CONTENT</h2>
+              <h4>10. MAJ - 04 JUNI 2021</h4>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Voluptatum doloribus corporis nemo laboriosam laudantium neque
