--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
           <img src="billeder/portfolio‑billede.webp" alt="test" />
           <div class="text">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Laboriosam culpa voluptatum a nesciunt saepe corrupti recusandae
-              dolorem eaque quaerat dignissimos.
+              Hvad har jeg lært på dette hæsblæsende semester? Hvis du er
+              interesseret i hvad man som multimediedesigner lærer helt fra
+              starten af, så er du kommet til det rette sted. Se de forskellige
+              temaer og udforsk de færdige produkter her.
             </p>
 
             <div class="knap">
