--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,13 @@
 
     <main id="portfolio">
       <section class="forord">
-        <div class="round">
-          <img src="billeder/profilbillede.webp" />
-        </div>
         <div class="text_indhold">
-          <h2>Portfolio</h2>
+          <h1>PORTFOLIO</h1>
           <hr />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-            exercitationem fuga debitis quidem doloribus at magni, nemo, placeat
-            culpa dicta nobis. Quidem nemo, expedita at quia soluta similique!
-            Non, nisi?
+            Velkommen til min portfolio for 1. semester på
+            multimedieuddannelsen. <br />Udforsk de forskellige temaer for at se
+            hvad jeg har lært gennem semestret.
           </p>
         </div>
       </section>
@@ -57,10 +53,9 @@
               <h2>02 WEB</h2>
               <h4>08. FEBRUAR - 05. MARTS 2021</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-                quos minima! Deserunt dolorum eveniet minima harum quasi quis
-                velit distinctio placeat veritatis facilis, ratione explicabo
-                aliquam dolores odit odio. Reiciendis.
+                Her fik jeg grundlæggende HTML og CSS færdigheder og lært om
+                designprocesser, hvilket gjorde det muligt for mig at lave et
+                responsivt site. Se hvordan det blev her.
               </p>
               <button>
                 <a href="web.html">SE TEMA</a>
@@ -80,9 +75,10 @@
               <h2>03 UX</h2>
               <h4>08. MARTS - 26. MARTS 2021</h4>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum doloribus corporis nemo laboriosam laudantium neque
-                nulla nobis eaque animi perspiciatis.
+                Her lærte jeg forskellige research metoder, hvordan man
+                behandler og præsentere data for at øge brugeroplevelsen. Se
+                hvordan min prototype blev efter flere tests og undersøgelser
+                her.
               </p>
               <button>
                 <a href="ux.html">SE TEMA</a>
@@ -102,10 +98,9 @@
               <h2>04 ANIMATION</h2>
               <h4>6. APRIL - 07. MAJ 2021</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-                quos minima! Deserunt dolorum eveniet minima harum quasi quis
-                velit distinctio placeat veritatis facilis, ratione explicabo
-                aliquam dolores odit odio. Reiciendis.
+                Her udvidede jeg mine HTML og CSS færdigheder og fik kendskab
+                til javacript gennem udviklingen af et simpelt spil_test. Se
+                hvordan jeg fik det til at blive til et spil her.
               </p>
               <button>
                 <a href="animation.html">SE TEMA</a>
@@ -125,9 +120,9 @@
               <h2>05 CONTENT</h2>
               <h4>10. MAJ - 04 JUNI 2021</h4>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Voluptatum doloribus corporis nemo laboriosam laudantium neque
-                nulla nobis eaque animi perspiciatis.
+                Her lærte jeg mere om indhold, såsom videoredigering, håndtering
+                af DSLR kamera, implementere video til hjemmeside og meget mere.
+                Se de færdige resultater her.
               </p>
               <button>
                 <a href="content.html">SE TEMA</a>
@@ -151,6 +146,7 @@
         </div>
       </div>
     </footer>
+
     <script src="login.js"></script>
     <script src="burgermenu.js"></script>
   </body>
