--- a/web.html
+++ b/web.html
@@ -31,34 +31,127 @@
     </header>
 
     <main>
-      <section class="splash">
-        <img src="billeder/baggrundsbillede_1.webp" />
-      </section>
-
       <section class="forord">
-        <h1>02 WEB</h1>
-        <hr />
-        <p>Dette er temaet grundlæggende web</p>
+        <div class="text_indhold">
+          <h1>02 WEB</h1>
+          <hr />
+          <p>
+            Dette tema bestod af delopgaver der sammen udgjorde det færdige
+            site, der var et onepage responsivt site.
+          </p>
+          <p>
+            Opgaven blev lavet ud fra grundlæggende kode og designprocesser, som
+            vi trinvist blev introduceret til, og fik erfaring med, gennem
+            delopgaverne.
+          </p>
+          <p>
+            Det var i tema 2 vi blev mødt med kode for første gang og her vi fik
+            en større forståelse for HTML og CSS, der er blev grundlæggende
+            værktøjer gennem resten af semestret.
+          </p>
+          <p>
+            På det designmæssige plan lærte vi de grundlæggende principper for
+            komposition, layout, praksisnære designprocesser og
+            dokumentationsformer, såsom mod board og styletile, i digital
+            medieproduktion.
+          </p>
+          <p>
+            Sidst fik vi også erfaring med Adobe Photoshop gennem udarbejdelsen
+            af vores splashbillede, der blev lavet ud fra en bestemt stilart.
+          </p>
+        </div>
       </section>
 
       <section>
-        <img src="billeder/web_responsive.webp" />
-        <h2>overskrift</h2>
-        <p>tema beskrivelse</p>
-        <button>
-          <a
-            href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
-            target="_blank"
-            >BESØG SITE</a
-          >
-        </button>
-        <button>
-          <a
-            href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
-            target="_blank"
-            >SE STYLETILE</a
-          >
-        </button>
+        <h2>OPGAVER I TEMAET</h2>
+        <div>
+          <div>
+            <img src="billeder/responsive_test.png" />
+          </div>
+          <div>
+            <h2>02.02.04</h2>
+            <h3>RESPONSIVE SITE</h3>
+            <p>
+              Denne opgave er den endelige version af det responsive site jeg
+              endte med.
+            </p>
+            <p>
+              Mit site blev lavet ud fra stilarten ”flat design” som var en
+              stilart min gruppe og jeg fik tildelt i starten af temaet.
+            </p>
+            <p>
+              Jeg startede ud med at lave en research på stilarten, der gav mig
+              den rette forståelse for stilarten til at kunne udarbejde
+              moodboards. Her lærte jeg at moodboards er et godt værktøj til
+              research da det hjalp mig med at definere stilen og give mig noget
+              at kunne arbejde mig hen til.
+            </p>
+            <p>
+              Gennem min research og udarbejdelsen af moodboards lærte jeg at
+              Flat design er et simpelt 2D design, hvor enkle
+              symboler/illustrationer benyttes i stedet for realistiske detaljer
+              og illustrationer. Stilarten inspirerede mig til sitets
+              splashbillede, hvor bl.a. En familie illustreres af silhuetter i
+              stedet for i realistiske detaljer. Det blev udarbejdet i Adobe
+              Photoshop og det gav mig en god forståelse for de basale værktøjer
+              i programmet.
+            </p>
+            <p>
+              For at kunne have de nødvendige værktøjer for at kunne lave det
+              responsive site blev vi trænet i at kunne aflæse og følge
+              layoutdiagrammer samt wireframes, hvilket blev gjort gennem små
+              opgaver der også introducerede os til id og classes. Da det var en
+              fast form både i øvelserne og det responsive site var det nemt at
+              gennemskue om man havde forstået det rigtigt eller ej. Her lærte
+              jeg at kodningen bliver nemmere med den rette planlægning.
+            </p>
+            <p>
+              Da sitet skulle blive responsivt blev vi introduceret til flexbox
+              og grids. Det var gennem disse værktøjer at vi kunne følge
+              kompositionen af elementerne fra wireframen.
+            </p>
+            <p>
+              Sitet indeholder også en side med et styletile, hvor vi her selv
+              skulle tage designmæssige beslutninger såsom fonts og farver på
+              sitet. Her lærte jeg især meget om tilgængelighed i fonts og
+              farver, fx hvad der er mere læsbart hvis man har et synshandicap
+              eller er farveblind. Styletilet blev lavet ved brug af
+              grundlæggende CSS såsom padding, margin, background-color m.m. som
+              vi lærte i løbet af temaet. Da det var blevet lavet, var det nemt
+              at implementere det til resten af sitet.
+            </p>
+          </div>
+
+          <button>
+            <a
+              href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/"
+              target="_blank"
+              >BESØG SITE</a
+            >
+          </button>
+          <button>
+            <a
+              href="http://ceciliejasmin.dk/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
+              target="_blank"
+              >SE STYLETILE</a
+            >
+          </button>
+        </div>
+
+        <section class="wide">
+          <div>
+            <h2>DOKUMENTATION</h2>
+            <div class="web_doku">
+              <img src="billeder/Web_moodboard_1.webp" />
+            </div>
+            <div class="web_doku">
+              <img src="billeder/Web_moodboard_2.webp" />
+            </div>
+            <div class="web_doku">
+              <img src="billeder/Web_moodboard_3.webp" />
+            </div>
+          </div>
+        </section>
       </section>
     </main>
 
