div added on pic

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
       <section>
         <div class="section_wrapper">
-          <img src="billeder/portfolio‑billede.webp" alt="test" />
+          <div>
+            <img src="billeder/portfolio‑billede.webp" alt="test" />
+          </div>
           <div class="text">
             <p>
               Hvad har jeg lært på dette hæsblæsende semester? Hvis du er
