om mig text added

--- a/om_mig.html
+++ b/om_mig.html
@@ -31,35 +31,50 @@
     </header>
 
     <main>
-      <section class="splash">
-        <img src="billeder/baggrundsbillede_1.webp" />
+      <section class="wide">
+        <h1>OM MIG</h1>
       </section>
-
-      <section>
-        <h1>Hvem er jeg?</h1>
-        <hr />
-      </section>
-
       <section>
         <div class="section_wrapper">
-          <div class="round">
-            <img src="billeder/billede_test.webp" />
-          </div>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi,
-            odit.
-          </p>
-        </div>
-      </section>
-
-      <section>
-        <div class="section_wrapper">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore,
-            quisquam.
-          </p>
           <div class="round">
             <img src="billeder/profilbillede.webp" />
+          </div>
+          <div class="text">
+            <h2>HVEM ER JEG?</h2>
+            <p>
+              Jeg hedder Cecilie Jasmin Jørgensen, er 24 år gammel og bosat på
+              Nørrebro. Jeg er meget kreativt anlagt og elsker at udfolde mig
+              kreativt hvadend det er at synge, danse, tegne eller på anden måde
+              at tænke kreativt og ud af boksen. Når jeg ikke sidder foran en
+              computer eller et stykke tegnepapir, elsker jeg at bevæge mig
+              enten ved at gå lange ture i naturen, cykle eller løbe. Derudover
+              har jeg også en passion for kunst og arkitektur, hvorfor jeg også
+              elsker at bo i Kbh.
+            </p>
+        
+        
+      </section>
+
+      <section>
+        <div class="section_wrapper">
+          <div class="round">
+            <img src="billeder/profilbillede.webp" />
+          </div>
+          <div>
+            <h2>HVORFOR MMD?</h2>
+            <p>
+              Før denne uddannelse studerede jeg til bygningskonstruktør på KEA,
+              men jeg lærte dog hurtigt at jeg skulle lave noget mere kreativt.
+              Valget faldt hurtigt på MMD da jeg tidligere har arbejdet som
+              tekstbeskrivelsesforfatter for et firma der lavede websites, hvor
+              jeg også fik lov til at hjælpe til på designet af dem. Jeg
+              begyndte på multimediedesigner uddannelsen i februar 2021. Igennem
+              semestret har jeg også fået bekræftet at det var det rigtige valg
+              at skifte studie. Jeg har forelsket mig i processen, både når det
+              gælder design og kode; jeg føler jeg har fundet min hylde hvor
+              hverdagen går hurtigt og hvor jeg føler mig udfodret og
+              underholdet hele vejen igennem.
+            </p>
           </div>
         </div>
       </section>
